WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206500
Invalid usage of ENABLE() before it's defined in WebCore/layout/integration/LayoutIntegrationBoxTree.cpp
https://bugs.webkit.org/show_bug.cgi?id=206500
Summary
Invalid usage of ENABLE() before it's defined in WebCore/layout/integration/L...
Adrian Perez
Reported
2020-01-20 06:48:08 PST
The ENABLE() macro is used before "config.h" gets a chance to be included, which makes the compilation trip. In the usual arches (at least for the ones tested by EWS bots) unified builds are masking the issue.
Attachments
Patch
(1.40 KB, patch)
2020-01-20 06:49 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.44 KB, patch)
2020-01-20 07:09 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-01-20 06:49:41 PST
Created
attachment 388236
[details]
Patch
Carlos Garcia Campos
Comment 2
2020-01-20 06:54:24 PST
Comment on
attachment 388236
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388236&action=review
> Source/WebCore/layout/integration/LayoutIntegrationBoxTree.cpp:30 > -#if ENABLE(LAYOUT_FORMATTING_CONTEXT) > - > #include "config.h" > + > +#if ENABLE(LAYOUT_FORMATTING_CONTEXT) > + > #include "LayoutIntegrationBoxTree.h"
The header is already guarded, so this should be: #include "config.h" #include "LayoutIntegrationBoxTree.h" #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
Adrian Perez
Comment 3
2020-01-20 07:09:10 PST
Created
attachment 388237
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2020-01-20 07:42:39 PST
The commit-queue encountered the following flaky tests while processing
attachment 388237
[details]
: editing/spelling/spellcheck-async-remove-frame.html
bug 158401
(authors:
morrita@google.com
,
rniwa@webkit.org
, and
tony@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2020-01-20 07:43:14 PST
Comment on
attachment 388237
[details]
Patch for landing Clearing flags on attachment: 388237 Committed
r254825
: <
https://trac.webkit.org/changeset/254825
>
WebKit Commit Bot
Comment 6
2020-01-20 07:43:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2020-01-20 07:44:13 PST
<
rdar://problem/58738949
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug