Invalid usage of ENABLE() before it's defined in WebCore/layout/integration/LayoutIntegrationBoxTree.cpp https://bugs.webkit.org/show_bug.cgi?id=206500

Reviewed by Žan Doberšek.

No new tests needed.

* layout/integration/LayoutIntegrationBoxTree.cpp: Include "config.h"
before using the ENABLE() macro, to make sure that it gets defined.


Canonical link: https://commits.webkit.org/219563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254825 268f45cc-cd09-0410-ab3c-d52691b4dbfc